# ua-parser

./: regexes.yaml
cpp/: CMakeLists.txt  UaParser.cpp  UaParser.h
